# nvjpeg-pybind

./: .gitignore  LICENSE  README.md  nvjpeg-compare.cpp  nvjpeg-python.cpp  pyproject.toml  setup.py
include/: JpegCoder.hpp
nvjpeg/: __init__.py  nvjpeg.pyi
nvjpeg.egg-info/: PKG-INFO  SOURCES.txt
src/x86/: JpegCoder.cpp
tests/: test-with-multiprocessing.py  test.py  test_encode.py
