[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "nvjpeg"
version = "0.1.0"
description = "Python interface for nvjpeg. Encode/Decode Jpeg with Nvidia GPU Hardware Acceleration."
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
authors = [{name = "JK", email = "skekdnzm1994@gmail.com"}]
keywords = [
    "pynvjpeg",
    "nvjpeg",
    "jpeg",
    "jpg",
    "encode",
    "decode",
    "jpg encode",
    "jpg decode",
    "jpeg encode",
    "jpeg decode",
    "gpu",
    "nvidia",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Environment :: GPU :: NVIDIA CUDA :: 11.8",
]
requires-python = ">=3.6"
dependencies = ["numpy", "pybind11"]

[project.urls]
Source = "https://github.com/jonggkwan/nvjpeg-python"
Tracker = "https://github.com/jonggkwan/nvjpeg-python/issues"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
nvjpeg = ["*.pyi", "*.pyd"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nvjpeg"]
